# integro-tabletop

./: .gitignore  .gitmodules  Backlog.md  Cargo.toml  LICENSE  README.md  build.rs  generate_queries.sh  index.html  index.scss  netlify.toml  rustfmt.toml
.cargo/: config.toml
.fork/: custom-commands.json
.github/workflows/: release.yml
.kanbn/: board.css  index.md
.kanbn/tasks/: ability-score-mutator-can-provide-minimum-score-value.md  ability-skill-displays-do-not-include-numerical-bonuses.md  ability-skill-modifier-display.md  active-tasks-toast.md  add-debug-capability-to-rebuild-database-metadata.md  add-restore-uses-mutator.md  armor-proficiency.md  attack-row-overview-ui-rehaul.md  attunement.md  auto-sync.md  autosave.md  beserker-barbarian-frenzy.md  bonus-damage-for-spells.md  bundle-requirements.md  character-changelog.md  character-modules.md  concentration-tracker.md  condition-degrees.md  condition-supression.md  conditions-are-not-being-saved-to-persistent-data.md  conditions-imply-other-conditions.md  convert-weapon-attack-to-explicit-structure.md  create-tasks-for-content-todos.md  customizations-breakout-tasks.md  details-drawer-layouts-evaluations.md  devotion-paladin-purity-of-spirit.md  display-prepared-info-spellcasting-overrides-in-spell-entry-context-panel.md  dodge-action-applies-a-condition.md  eldritch-invocation-book-of-ancient-secrets.md  equipment-extension-for-weapon-attack-bonuses.md  evaluator-output-types.md  expanded-item-modal-editor.md  expanded-object-cache.md  generate-integration-tests-from-local-modules.md  generator-module-components.md  hit-die-mutator.md  hobgoblin-reserves-of-strength.md  identify-poor-performance.md  initiative-modifier-needs-to-be-implemented.md  inventory-search-bar.md  (+39 more)
crates/database/: Cargo.toml
crates/database/src/: client.rs  cursor.rs  error.rs  ext.rs  index.rs  lib.rs  record.rs  schema.rs
crates/database/src/ext/: object_store.rs  query.rs  transaction.rs
crates/github/: Cargo.toml
crates/github/src/: changed_file.rs  error.rs  lib.rs  queries.rs  repository.rs  requests.rs
crates/github/src/queries/: find_orgs.rs  search_for_repos.rs
crates/github/src/query/: stream.rs
crates/github/src/requests/: find_orgs.rs  repos.rs  search_repositories.rs
crates/kdlize/: Cargo.toml  rustfmt.toml
crates/kdlize/src/: builder.rs  error.rs  ext.rs  lib.rs  reader.rs
crates/kdlize/src/ext/: document.rs  entry.rs  node.rs  value.rs
crates/netlify-oauth/: Cargo.toml
crates/netlify-oauth/src/: auth.rs  lib.rs  provider.rs  status.rs
modules/: example.kdl  gen_variants.py  spellcasting.kdl
modules/examples/dnd5e/: casters_spellbook.kdl  index
modules/scripts/: decompend.py  gen_all_variants.sh  insert_spell_tags.py  renameCompendiumGroups.py
modules/taldorei-reborn/: index.md
modules/taldorei-reborn/dnd5e/background/: ashari.kdl  clasp.kdl  lyceumScholar.kdl  rifleCorps.kdl  (+1 more)
modules/wotc-egtw/: index.md
modules/wotc-erftlw/: index.md
modules/wotc-ftod/: index.md
modules/wotc-moot/: index.md
modules/wotc-motm/: index.md
modules/wotc-oota/dnd5e/: index
modules/wotc-phb/: index.md
modules/wotc-sacoc/: index.md
modules/wotc-tcoe/: index.md
modules/wotc-toa/dnd5e/: index
modules/wotc-vrgtr/: index.md
modules/wotc-xgte/: index.md  magic.kdl  spells.kdl
src/: auth.rs  bootstrap.rs  components.rs  data.rs  database.rs  kdl_ext.rs  lib.rs  logging.rs  main.rs  page.rs  path_map.rs  storage.rs  system.rs  task.rs  theme.rs  utility.rs
src/bootstrap/: components.rs
src/bootstrap/components/: tooltip.rs
src/components/: ability.rs  annotated_number.rs  annotated_number.scss  auth.rs  context_menu.rs  context_menu.scss  database.rs  glyph.scss  hit_points.rs  hook.rs  indirect.rs  link_object.rs  media_query.rs  mobile.rs  modal.rs  nav.rs  nav_onesheet_tabs.scss  object_browser.rs  panel.rs  proficiencies.rs  progress_bar.rs  roll.rs  speed_senses.rs  spinner.rs  style.rs  tag.rs  tag.scss  view_scaler.rs
src/components/ability/: saving_throw.rs  score.rs  score.scss  skill.rs
src/components/panel/: actions.rs  features.rs  inventory.rs
src/components/progress_bar/: ticked.rs  ticked.scss
src/data/: user.rs
src/database/: app.rs  client.rs  cursor.rs  db.rs  error.rs  ext.rs  index.rs
src/database/app/: entry.rs  module.rs  query.rs  schema.rs  settings.rs
src/kdl_ext/: as_kdl.rs  context.rs  from_kdl.rs
src/logging/: console.rs  wasm.rs
src/page/: app.rs  characters.rs  home.rs  modules.rs  not_found.rs  owned_modules.rs
src/page/characters/: sheet.rs
src/page/modules/: loader.rs
src/storage/: autosync.rs  github.rs
src/storage/autosync/: download_file_updates.rs  find_file_updates.rs  find_modules.rs  generate_homebrew.rs  parse_content.rs  query_module_owners.rs  scan_for_modules.rs  scan_repository.rs
src/storage/github/: client.rs  queries.rs  query.rs
src/system/: block.rs  core.rs  dnd5e.rs  evaluator.rs  generator.rs  generics.rs  mutator.rs  registry.rs  source.rs
src/system/block/: factory.rs  registry.rs
src/system/core/: factory.rs  source.rs  system.rs
src/system/dnd5e/: ability.rs  action.rs  character.rs  components.rs  condition.rs  content.rs  criteria.rs  data.rs  evaluator.rs  feature.rs  generator.rs  item.rs  modifier.rs  mutator.rs  proficiency.rs  roll.rs  value.rs
src/system/evaluator/: factory.rs  generic.rs
src/system/generator/: factory.rs  generic.rs  queue.rs  variant_cache.rs
src/system/mutator/: factory.rs  generic.rs
src/system/registry/: builder.rs  entry.rs
src/task/: dispatch.rs  list.rs  progress.rs  signal.rs
src/utility/: error.rs  evaluator.rs  generator.rs  mutator.rs  selector.rs  trait_object_eq.rs  value.rs  web_ext.rs
src/utility/selector/: data.rs  id.rs  object.rs  value.rs
tests/: modules_template
(+373 files in other folders)
