[package]
name = "tabletop-tools"
description = ""
repository = "https://github.com/temportalflux/tabletop-tools/"
license = "MIT OR Apache-2.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
version = "0.0.1"
edition = "2021"

[build]
target = "wasm32-unknown-unknown"

[dependencies]
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
log = "0.4"
yew = { version = "0.20", features = ["csr"] }
yew-router = { version = "0.17" }
yewdux = "0.9"
gloo-storage = "0.2"
gloo-utils = "0.1"
web-sys = { version = "0.3", features = ["Request", "Storage", "Window", "DataTransfer", "HtmlSelectElement", "DomTokenList", "MediaQueryList"] }
wasm-bindgen-futures = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
urlencoding = "2.1"
kdl = "4.6"
yew-hooks = "0.2"
url = "2.3"
fluvio-wasm-timer = "0.2"
enumset = "1.0"
multimap = "0.8"
