[package]
name = "tabletop-tools"
description = ""
repository = "https://github.com/temportalflux/tabletop-tools/"
license = "MIT OR Apache-2.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
version = "0.0.1"
edition = "2021"

[dependencies]
any-range = "0.1"
wasm-bindgen = "0.2"
log = { version = "0.4", features = ["std"] }
yew = { version = "0.20", features = ["csr"] }
yew-router = { version = "0.17" }
yewdux = "0.9"
gloo-storage = "0.2"
gloo-utils = "0.1"
gloo-timers = "0.2"
web-sys = { version = "0.3", features = [
	"Request", "Storage", "Window", "DataTransfer",
	"HtmlSelectElement", "HtmlInputElement",
	"DomTokenList", "MediaQueryList",
	"Node", "NodeList",
	"Event", "EventTarget", "KeyboardEvent",
	"Performance"
] }
wasm-bindgen-futures = "0.4"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
urlencoding = "2.1"
kdl = { version = "5.0.0-alpha.0", git = "https://github.com/kdl-org/kdl-rs" }
yew-hooks = "0.2"
url = "2.3"
fluvio-wasm-timer = "0.2"
enumset = "1.0"
multimap = "0.9"
enum-map = "2.4"
convert_case = "0.6"
dyn-clone = "1.0"
uuid = { version = "1.3", features = ["v4", "js"] }
num-traits = "0.2"
simplelog = "0.12"
time = "0.3"
downcast-rs = "1.2"
async-channel = "1.8"
derivative = "2.2"
itertools = "0.10"
phf = { version = "0.11", features = ["macros"] }
idb = "0.4"
serde-wasm-bindgen = "0.5"
js-sys = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
unzip-n = "0.1"
rand = "0.8"
wasm-timer = "0.2"
regex = "1.8"

[target.'cfg(windows)'.dependencies]
tokio = { version="1.26", features=["full"] }
