[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
futures = "0.3"
futures-util = "0.3"
thiserror = "1.0"
idb = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
