[package]
name = "netlify-oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
async-channel = "1.8"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
yewdux = "0.9"
yew-hooks = "0.3"
serde = "1.0"
serde_json = "1.0"
web-sys = { version = "0.3", features = [
	"Window", "Event", "EventTarget",
] }
gloo-utils = "0.2"
wasm-bindgen = "0.2"
